Make sure program is bound before calling initialize().

Some implementations will use the initialization to set
constant uniforms like texture locations, so bind the
program before so this will work.

Task-number: QTBUG-39472
Change-Id: I677c5aeefe68535bd4805e83b93308d0bd090030
Reviewed-by: Laszlo Agocs <laszlo.agocs@digia.com>